<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:title="@string/icon_text"
        android:icon="@drawable/ic_menu_refresh"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_selectcity"
        android:orderInCategory="100"
        android:title="@string/SelectCity"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_managecity"
        android:orderInCategory="100"
        android:title="@string/CityManager"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_reset"
        android:orderInCategory="100"
        android:title="@string/action_reset"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
